--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #---------PROD---------------------------------------
-spring.datasource.url= jdbc:mysql://${{ MYSQLHOST }}:${{ MYSQLPORT }}/${{ MYSQLDATABASE }}
-spring.datasource.username=${{ MYSQLUSER }}
-spring.datasource.password=${{ MYSQLPASSWORD }}
+spring.datasource.url= jdbc:mysql://${ MYSQLHOST }:${ MYSQLPORT }/${ MYSQLDATABASE }
+spring.datasource.username=${ MYSQLUSER }
+spring.datasource.password=${ MYSQLPASSWORD }
 
 #spring.datasource.url=jdbc:mysql://localhost/db_full
 #spring.datasource.username=ancort
@@ -20,4 +20,4 @@ spring.jackson.locale=es_CL
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-server.port=${{ MYSQLPORT }}
+server.port=${ MYSQLPORT }
