--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
 
   servlet:
     multipart:
-      max-file-size: 10mb
+      max-file-size: 10MB
       max-request-size: 10MB
   jpa:
     hibernate:
