--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://${{HOST}}:${{PORT}}/${{DATABASE}}
-    username: ${{USER}}
-    password: ${{PASSWORD}}
+    url: jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+    username: ${MYSQLUSER}
+    password: ${MYSQLPASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jackson:
